# coral

./: .gitignore  Cargo.toml  README.md  build.sh  rustfmt.toml
.cargo/: config.toml
.helix/: languages.toml
cicd/: conn_conf.json  server_conf.toml
cicd/opentelemetry/: README.md  collector.yaml
cicd/self_sign_cert/: client.csr  client.key  gen.sh  open.cnf  server.crt  server.csr  server.key
cicd/self_sign_cert/ca/: client.crt  server.crt
coral-captcha/: Cargo.toml
coral-captcha/src/: lib.rs
coral-conf/: Cargo.toml
coral-conf/src/: lib.rs
coral-conf/tests/: check.rs
coral-log/: Cargo.toml  build.rs
coral-log/benches/: benchdisk.rs
coral-log/src/: cli.rs  error.rs  format.proto  format.rs  lib.rs  proto.rs  record.rs  record_proto.rs
coral-log/src/logs/: format.rs  logger.rs  logs.proto  logs_proto.rs  mod.rs
coral-log/src/metrics/: mod.rs
coral-log/src/stdlog/: format.proto  format.rs  io.rs  mod.rs  record_proto.rs
coral-log/src/tests/: exception.rs  mod.rs  parse.rs  proto.rs
coral-log/src/tests/logs/: mod.rs  parse.rs
coral-log/src/tests/stdlog/: mod.rs  parse.rs
coral-log/src/tests/tktrace/: mod.rs  parse.rs  proto.rs
coral-log/src/tktrace/: format.rs  mod.rs  proto.rs  record_proto.rs
coral-log/src/traces/: mod.rs  otel.rs
coral-log/tests/: log_parse.rs  log_test.rs
coral-macro/: Cargo.toml
coral-macro/src/: env_assign.rs  lib.rs  trace_log.rs  wasm.rs
coral-macro/tests/: log.rs
coral-net/: Cargo.toml
coral-net/src/: client.rs  db.rs  discover.rs  error.rs  hand.rs  http.rs  lib.rs  midware.rs  server.rs  tcp.rs  tls.rs  udp.rs  util.rs
coral-net/src/data/: file.rs  zip.rs
coral-net/tests/: client.rs  db.rs  server.rs  tls.rs
coral-proxy/: Cargo.toml
coral-proxy/benches/: concurrence.rs
coral-proxy/src/: cli.rs  error.rs  hand.rs  http.rs  io.rs  main.rs  tls.rs  util.rs  ws.rs
coral-proxy/tests/: client.rs  h1_client.rs  h2_client.rs  http3_client.rs
coral-runtime/: Cargo.toml
coral-runtime/src/: cli.rs  error.rs  lib.rs
coral-server/: Cargo.toml  build.rs
coral-server/src/: cli.rs  error.rs  hand.rs  io.rs  main.rs  midw.rs  payload.rs  user.rs
coral-server/tests/: h3_basic.rs  http3_server.rs
coral-util/: Cargo.toml
coral-util/src/: cli.rs  consts.rs  error.rs  lib.rs  tls.rs  tow.rs
coral-util/src/db/: cache.rs
coral-util/tests/: trace.rs
coral-wasm/gamelife/: Cargo.toml
coral-wasm/gamelife/src/: lib.rs
coral-wasm/payload/: Cargo.toml  build.rs
coral-wasm/payload/src/: lib.rs  payload.rs
coral-wasm/protos/: payload.proto  payload.rs
tests/: README.md  gen.sh  server.csr  server.key  tls.cnf
tests/self_sign_cert/: client.crt  client.key  server.crt  server.key
tests/self_sign_cert/ca/: client.crt
tests/websocket/: README.md  conn.js
