[workspace]
resolver = "2"
members = [
  "coral-log",
  "coral-net",
  "coral-proxy",
  "coral-runtime",
  "coral-server",
  "coral-util",
]

[workspace.package]
authors = ["kiljiaden@163.com"]
edition = "2021"
repository = "https://github.com/chuan-xu/coral.git"
rust-version = "1.80.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = ["http2", "multipart", "original-uri", "tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
coral-log = { path = "coral-log" }
coral-macro = { path = "coral-macro" }
coral-net = { path = "coral-net" }
coral-runtime = { path = "coral-runtime" }
coral-util = { path = "coral-util" }
core_affinity = "0.8"
crossbeam-channel = "0.5"
fastrace = { version = "0.7", features = ["enable"] }
futures = "0.3"
h3 = { git = "https://github.com/chuan-xu/coral-h3.git", recv = "6bef8005f87137a4b7cf01d5f0f7ed86f1939cd1"}
# h3-quinn = "0.0.7"
h3-quinn = { git = "https://github.com/chuan-xu/coral-h3.git", recv = "6bef8005f87137a4b7cf01d5f0f7ed86f1939cd1"}
http-body = "1.0.1"
http-body-util = "0.1"
hyper = { version = "1.4.0", features = ["full"] }
# hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "tls12"] }
hyper-util = { version = "0.1", features = ["full"] }
local-ip-address = "0.6"
log = { version = "0.4", features = ["std","kv", "kv_unstable", "kv_std"] }
num_cpus = "1.16"
pin-project-lite = "0.2"
prost = "0.13"
prost-types = "0.13"
quinn = { version = "0.11", default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = {version = "0.11.6", default-features =  false, features = ["rustls", "ring"]}
regex = "1.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = {version = "0.26", default-features = false, features = ["tls12", "ring"]}
tokio-stream = { version = "0.1", default-features = false, features = ["full"] }
tokio-tungstenite = "0.23"
tokio-util = { version = "0.7", default-features = false, features = ["full"] }
tower ={ version = "0.4", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
webpki-roots = "0.26"


# build-dependencies
prost-build = "0.13"

# dev-dependencies
criterion = { version = "0.5", default-features = false, features = ["stable", "rayon", "plotters"] }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

