[workspace]
resolver = "2"
members = [ 
  "coral-conf",
  "coral-log",
  "coral-net",
  "coral-proxy",
  "coral-runtime",
  "coral-server",
]

[workspace.package]
authors = ["kiljiaden@163.com"]
edition = "2021"
repository = "https://github.com/chuan-xu/coral.git"
rust-version = "1.80.0"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = ["http2", "multipart", "original-uri", "tokio", "macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
bytes = "1"
chrono = "0.4"
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
coral-conf = { path = "coral-conf" }
coral-log = { path = "coral-log" }
coral-macro = { path = "coral-macro" }
coral-net = { path = "coral-net" }
coral-runtime = { path = "coral-runtime" }
core_affinity = "0.8"
crossbeam-channel = "0.5"
fastrace = { version = "0.7", features = ["enable"] }
futures = "0.3"
h3 = { git = "https://github.com/chuan-xu/coral-h3.git", recv = "388753b6bbc7ac31d13e2508eadb67c8bf2ea145"}
h3-quinn = { git = "https://github.com/chuan-xu/coral-h3.git", recv = "388753b6bbc7ac31d13e2508eadb67c8bf2ea145"}
http-body = "1.0.1"
http-body-util = "0.1"
hyper = { version = "1.4.0", features = ["full"] }
# hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http2", "tls12"] }
hyper-util = { version = "0.1", features = ["full"] }
local-ip-address = "0.6"
log = { version = "0.4", features = ["std","kv", "kv_unstable", "kv_std"] }
num_cpus = "1.16"
pin-project-lite = "0.2"
prost = "0.13"
prost-types = "0.13"
quinn = { version = "0.11", default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = {version = "0.11.6", default-features =  false, features = ["rustls", "ring"]}
regex = "1.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"]}
tokio-stream = { version = "0.1", default-features = false, features = ["full"] }
tokio-tungstenite = "0.23"
tokio-util = { version = "0.7", default-features = false, features = ["full"] }
toml = { version = "0.8" }
tower ={ version = "0.4", features = ["full"] }
tower-http = { version = "0.6.0", default-features = false, features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
webpki-roots = "0.26"

# database
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "postgres"] }
sqlx-core = { version = "0.8.2", default-features = false, features = ["migrate", "json", "_rt-tokio", "_tls-rustls-ring", "_tls-rustls"] }


# build-dependencies
prost-build = "0.13"

# dev-dependencies
criterion = { version = "0.5", default-features = false, features = ["stable", "rayon", "plotters"] }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

