[package]
name = "coral-log"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bytes.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace= true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[[bench]]
name = "benchdisk"
harness = false
