[package]
name = "coral-log"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bytes.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace= true
log = { version = "0.4", features = ["std","kv"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["smallvec", "fmt", "ansi", "tracing-log", "std", "chrono", "json"], optional = true }

[features]
default = ["stdlog"]
tktrace = ["tracing", "tracing-appender", "tracing-subscriber"]
stdlog = ["log"]

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[[bench]]
name = "benchdisk"
harness = false
