[package]
name = "coral-log"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
fastrace = { workspace = true, features = ["enable"] }
fastrace-opentelemetry = "0.7"
log = { workspace = true, features = ["std","kv", "kv_unstable"] }
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
opentelemetry_sdk = "0.24"
prost.workspace = true
prost-types.workspace = true
thiserror.workspace= true
uuid.workspace = true 

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[[bench]]
name = "benchdisk"
harness = false
