[package]
name = "coral-macro"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "full", "extra-traits"] }
