[package]
name = "coral-net"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2", "tokio"] }
axum-server.workspace = true
bytes.workspace = true
clap.workspace = true
coral-log.workspace = true
coral-macro.workspace = true
coral-runtime.workspace = true
fastrace = { workspace = true, features = ["enable"] }
h3.workspace = true
h3-quinn.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["default"] }
quinn = { workspace = true, default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = { workspace = true, default-features =  false, features = ["rustls", "ring"]}
rustls = { workspace = true, default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio-rustls = { workspace = true, default-features = false, features = ["tls12", "ring"]}
webpki-roots.workspace = true
