[package]
name = "coral-net"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["http2", "tokio"] }
axum-server.workspace = true
bytes.workspace = true
coral-conf.workspace = true
coral-log.workspace = true
coral-macro.workspace = true
coral-runtime.workspace = true
fastrace = { workspace = true, features = ["enable"] }
futures.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["default"] }
log = { workspace = true }
pin-project-lite.workspace = true
quinn = { workspace = true, default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = { workspace = true, default-features =  false, features = ["rustls", "ring"]}
rustls = { workspace = true, default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio-rustls = { workspace = true, default-features = false, features = ["tls12", "ring"]}
tokio-stream = { workspace = true, default-features = false, features = ["full"] }
tokio-tungstenite.workspace = true
toml.workspace = true
tower = { workspace = true, features = ["full"] }
uuid.workspace = true
webpki-roots.workspace = true

# database
sqlx.workspace = true
sqlx-core.workspace = true
