[package]
name = "coral-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http2", "tokio"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
coral-log = { path = "../coral-log" }
coral-runtime = { path = "../coral-runtime" }
futures = "0.3"
hyper = { version = "1.4", default-features = false, features = ["client", "http2", "server"] }
hyper-util = "0.1"
regex = "1.10"
rustls = "0.23"
rustls-pemfile = "2.1"
thiserror = "1.0"
tokio-rustls = "0.26"
tokio-util = { version = "0.7", default-features = false, features = ["full"] }
tower ={ version = "0.4", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
webpki-roots = "0.26"


[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["stable", "rayon", "plotters"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "tls12"] }
# reqwest ={ version = "0.12", default-features = false, features = ["__rustls", "charset", "http2", "macos-system-configuration"] }

[[bench]]
name = "concurrence"
harness = false
