[package]
name = "coral-proxy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["http2", "tokio"] }
axum-server.workspace = true
clap.workspace = true
coral-log.workspace = true
coral-macro.workspace = true
coral-runtime.workspace = true
coral-util.workspace = true
fastrace = { workspace = true, features = ["enable"] }
futures.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["default"] }
log = { workspace = true }
regex.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, default-features = false, features = ["full"] }
tower = { workspace = true, features = ["full"] }
uuid.workspace = true 
webpki-roots.workspace = true


[dev-dependencies]
criterion = { workspace = true, default-features = false, features = ["stable", "rayon", "plotters"] }
http-body-util.workspace = true
hyper-rustls = { workspace = true, default-features = false, features = ["http2", "tls12"] }

[[bench]]
name = "concurrence"
harness = false
