[package]
name = "coral-proxy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["http2", "tokio"] }
axum-server.workspace = true
bytes.workspace = true
clap.workspace = true
coral-conf.workspace = true
coral-log.workspace = true
coral-macro.workspace = true
coral-net.workspace = true
coral-runtime.workspace = true
fastrace = { workspace = true, features = ["enable"] }
futures.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["default"] }
log = { workspace = true }
quinn = { workspace = true, default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = { workspace = true, default-features =  false, features = ["rustls", "ring"]}
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, default-features = false, features = ["full"] }
toml.workspace = true
tower = { workspace = true, features = ["full"] }
uuid.workspace = true 

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["stable", "rayon", "plotters"] }
tokio-stream = { workspace = true, default-features = false, features = ["full"] }

[[bench]]
name = "concurrence"
harness = false
