[package]
name = "coral-runtime"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
core_affinity.workspace = true
log.workspace = true
thiserror.workspace  = true
tokio.workspace  = true
num_cpus.workspace  = true
