[package]
name = "coral-runtime"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
core_affinity.workspace = true
log.workspace = true
coral-conf.workspace = true
coral-macro.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace  = true
tokio.workspace  = true
num_cpus.workspace  = true
