[package]
name = "coral-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http2", "multipart", "original-uri", "tokio"] }
clap.workspace = true
coral-log.workspace = true
coral-runtime.workspace = true
coral-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http-body.workspace = true
http-body-util.workspace = true
log = { workspace = true }
thiserror.workspace = true
tower = { workspace = true, features = ["full"] }
