[package]
name = "coral-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
axum = { workspace = true, features = ["http2", "multipart", "original-uri", "tokio"] }
clap.workspace = true
coral-conf.workspace = true
coral-log.workspace = true
coral-macro.workspace = true
coral-runtime.workspace = true
coral-net.workspace = true
fastrace = { workspace = true, features = ["enable"] }
futures.workspace = true
h3.workspace = true
h3-quinn.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http-body.workspace = true
http-body-util.workspace = true
# local-ip-address.workspace = true
log = { workspace = true }
quinn = { workspace = true, default-features = false, features = ["platform-verifier", "ring", "runtime-tokio", "rustls"]}
quinn-proto = { workspace = true, default-features =  false, features = ["rustls", "ring"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tower = { workspace = true, features = ["full"] }


[dev-dependencies]
pin-project-lite.workspace = true
