[package]
name = "coral-util"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
fastrace = { workspace = true, features = ["enable"] }
log = { workspace = true }
tower = { workspace = true, features = ["full"] }
uuid.workspace = true 
