[package]
name = "payload"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
coral-macro.workspace =true
wasm-bindgen.workspace = true

# protobuf
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true
